updated with fixed and sticky

--- a/absolute/absolute-boxes/index.html
+++ b/absolute/absolute-boxes/index.html
@@ -14,11 +14,11 @@
     <main>
         <section>
             <article>
-                <div>                    
+                <div>
+                    <h2>Here's a header</h2>                    
                 </div>
             </article>
         </section>
-        <section>
     </main>
 </body>
 
