updated css and stickys

--- a/fixed/fixed-sticky-basics/index.html
+++ b/fixed/fixed-sticky-basics/index.html
@@ -18,19 +18,25 @@
     </header>
     <main>
         <article>
-            <h2>some content element</h2>
-            <p>and some paragraph</p>
+            <div>
+                <h2>some content element</h2>
+                <p>and some paragraph</p>
+            </div>
         </article>
         <nav class="sticky">
             <a href="#">more navigation elements</a>
         </nav>
         <article>
-            <h2>some content element</h2>
-            <p>and some paragraph</p>
+            <div>
+                <h2>another content element</h2>
+                <p>and some paragraph</p>
+            </div>
         </article>
         <article>
-            <h2>some content element</h2>
-            <p>and some paragraph</p>
+            <div>
+                <h2>..and a third content element</h2>
+                <p>and some paragraph</p>
+            </div>
         </article>
     </main>
 </body>
