--- a/fixed/fixed-sticky-basics/index.html
+++ b/fixed/fixed-sticky-basics/index.html
@@ -38,6 +38,15 @@
                 <p>and some paragraph</p>
             </div>
         </article>
+        <nav class="sticky">
+            <a href="#">..even more navigation elements</a>
+        </nav>
+        <article>
+            <div>
+                <h2>..and a fourth content element</h2>
+                <p>and some paragraph</p>
+            </div>
+        </article>
     </main>
 </body>
 
